--- a/index.html
+++ b/index.html
@@ -439,7 +439,7 @@
 
       }//init
     </script>
-    <scrip>
+    <script>
       //crea un grafico con los datos del registro seleccionado mediante la libreria highchart.js
 
 //la funcion charts recibe por parámetro el cartodb_id del barrio seleccionado en el mapa
