--- a/index.html
+++ b/index.html
@@ -154,7 +154,6 @@
       <a href="#2009" id="2009" class="button year">2009</a> 
       <a href="#2010" id="2010" class="button year">2010</a>
       <a href="#2011" id="2011" class="button year">2011</a>
-      <a href="index_animated.html" class="button">MAPA ANIMADO</a>
     </div>
 
 
@@ -162,7 +161,7 @@
     <div class="sidepanel">
       <div class="wrapper">
         <div class="context subheader">
-          <p>Map created by <a href="http://level423.hol.es/">{S.González}</a></p>
+          <p>Map created by <a href="https://github.com/mappingCo">{Mapping & Co}</a></p>
         </div>
         <h1>Distribución de la Renta en Barcelona (2008-2011)</h1>
  
