--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     <div class="sidepanel">
       <div class="wrapper">
         <div class="context subheader">
-          <p>Map created by <a href="http://level423.hol.es/">{S.González}</a></p>
+          <p>Map created by <a href="http://mappingandco.com/">{Mapping & Co}</a></p>
         </div>
         <h1>Distribución de la Renta en Barcelona (2008-2011)</h1>
  
